# tokrs

./: CONTRIBUTING.rst  Cargo.toml  Pipfile  README.md  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
docs/: conf.py  index.rst  installation.rst  usage.rst
src/: lib.rs  vocab.rs
tests/: __init__.py  test_tok.py
tok/: __init__.py  cli.py
